--- a/font.css
+++ b/font.css
@@ -6,3 +6,9 @@ a {
   text-decoration: none;
   color: rgb(240, 240, 240);
 }
+
+.p1 {
+  color: white;
+  padding-left: 100px;
+  margin-left: 50px;
+}
